--- a/code/OD calculation.ipynb
+++ b/code/OD calculation.ipynb
@@ -212,9 +212,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -226,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
